--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Tiktok Scraper, Download Video From Tiktok Without Watermark.",
   "main": "index.js",
   "scripts": {
-    "start": "node example.js",
+    "start": "node app.js",
     "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
